--- a/package.json
+++ b/package.json
@@ -4,17 +4,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export":"next export",
     "lint": "next lint"
   },
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
-    "gh-pages": "^4.0.0",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
