--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,10 +25,10 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build
-    - run: npm run export
+        cache: 'yarn'
+    - run: yarn ci
+    - run: yarn run build
+    - run: yarn run export
     
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@v4.2.5
