--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,7 +28,11 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build
+      env:
+          NEXT_PUBLIC_BASE_PATH: /restoApp
     - run: npm run export
+      env:
+          NEXT_PUBLIC_BASE_PATH: /restoApp
     - run: touch ./out/.nojekyll
 
     - name: Deploy 🚀
